<resources>
    <string name="app_name">DinnerDecoder</string>
    <string name="button">Button</string>
    <string name="chinese">CHINESE</string>
    <string name="todo">TODO</string>
    <string name="add_new_food">Add New Food.......</string>
    <string name="add_food">ADD FOOD</string>
    <string name="decide_Food">DECIDE FOOD</string>
    <string name="ADD_FOOD">ADD FOOD</string>
</resources>