<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/decideBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/muli"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/decide_Food"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="DECIDE FOOD" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli"
        android:text="@string/chinese"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dd_logo" />

    <EditText
        android:id="@+id/selectFoodText"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:fontFamily="@font/muli"
        android:hint="@string/add_new_food"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#00838F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/addFood"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/ADD_FOOD"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectFoodText"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>